--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>생활코딩 : WEBn > WEB1 - HTML & Internet</h1>
+<h1>생활코딩 : WEBn > WEB1 - HTML & Internet 내용 정리</h1>
 
 <p>
     <h2>태그</h2>
