--- a/css.html
+++ b/css.html
@@ -80,7 +80,8 @@
     <h2>selector(선택자) 종류</h2>
     <a href="https://www.w3schools.com/cssref/css_selectors.asp" target="_blank" title="w3schools CSS Selector Reference">CSS Selector Reference</a>
     <br><br>
-    기억할 것은 선택자가 먹히는 우선순위(selector's priority)가 id(#) > class(.) > tag 라는 사실!
+    기억할 것은 선택자가 먹히는 우선순위(selector's priority)가 id(#) > class(.) > tag 라는 사실!<br>
+    또한 #id tag 라던가 .class #id 같이 부모 자식 관계를 선택자료 표현하여 특정한 선택자를 지칭할 수 있다.
     <br><br>
 
     <h2>declaration(선언, 효과) 종류</h2>
@@ -111,15 +112,15 @@
                  </div><br>
 
 
-        <div>
+        <div style="  margin-left: 10px;display:grid; grid-template-columns: 300px ">
         &lt;head&gt;<br>
         &lt;style&gt;<br>
                 <blockquote>
                 #grid{<br>
                     <blockquote>
                   border:5px solid pink;<br>
-                  display:grid;<br>
-                  <strong>grid-template-columns: 150px 1fr;</strong><br>
+                  <strong><u>display:grid;</u></strong><br>
+                  <strong><u>grid-template-columns: 150px 1fr;</u></strong><br>
                     </blockquote>
                 }<br><br>
 
