--- a/css.html
+++ b/css.html
@@ -204,5 +204,8 @@
         <br><br>
         이런식으로 CSS를 외부 파일을 불러와 적용할 수 있다.
 </p>
+
+<a href="kcar://app"> kcar app 실행 하기 </a>
 </body>
 </html>
+
