--- a/user_private.html
+++ b/user_private.html
@@ -39,9 +39,9 @@
     6. 개인정보 보호책임자 작성<br>
     - 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br>
     - 개인정보 보호책임자 및 담당부서<br>
-      성명 : Dongy<br>
+      성명 : kceohcto<br>
       직책 : 1인<br>
-      연락처 : noahkim.j@gmail.com<br><br>
+      연락처 : kceohcto.j@gmail.com<br><br>
      
     - 정보주체께서는 서비스을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. <br>
       정보주체의 문의에 대해 지체없이 답변 및 처리해드릴 것입니다.
