--- a/user_private.html
+++ b/user_private.html
@@ -12,28 +12,28 @@
     <p> 
     1. 개인정보의 처리 목적<br>
     ‘내가 만드는 그림 카드/낱말카드/단어카드’ 은(는) 다음의 목적을 위하여 개인정보를 처리하고 있으며, 다음의 목적 이외의 용도로는 이용하지 않습니다. <br>
-    - 해당 핸드폰의 카메라를 사용하기 위함<br>
+    - 해당 핸드폰의 카메라를 사용하기 위함
     </p> 
     <p> 
     2. 개인정보 파일 현황<br>
-    - 사용자의 사용정보를 수집하지 않습니다.<br>
+    - 사용자의 사용정보를 수집하지 않습니다.
     </p> 
     <p> 
     3. 개인정보의 처리 및 보유 기간<br>
     - 사용자의 사용정보를 수집하지 않습니다.<br>
     - <카메라의 활성화> : 필수항목 : android.permission.CAMERA<br>
       카메라를 촬영 후 이미지를 변환을 위하여 핸드폰에 저장하는 용도로만 사용하고 서버와 이와 관련된 통신을 하지 않습니다.<br>
-      그 외의 어떠한 자료도 정보를 수집하지 않습니다.<br>
+      그 외의 어떠한 자료도 정보를 수집하지 않습니다.
     </p> 
     <p> 
     4. 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.<br>
     - 앱 사용시 카메라의 변환을 위한 촬영 활성화 권한만 사용합니다.<br>
     - 카메라의 변환을 위한 촬영 외에는 어떤 목적으로도 자료를 수집, 처리하지 않습니다.<br>
-    - 앱 삭제시 더 이상 위 권한을 사용하지 않습니다.<br>
+    - 앱 삭제시 더 이상 위 권한을 사용하지 않습니다.
     </p>  
     <p> 
     5. 개인정보의 안전성 확보 조치 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.<br>
-    - 사용자의 사용정보를 수집하지 않습니다.<br>
+    - 사용자의 사용정보를 수집하지 않습니다.
     </p> 
     <p> 
     6. 개인정보 보호책임자 작성<br>
@@ -41,7 +41,7 @@
     - 개인정보 보호책임자 및 담당부서<br>
       성명 : kceohcto<br>
       직책 : 1인<br>
-      연락처 : kceohcto.j@gmail.com<br><br>
+      연락처 : kceohcto.j@gmail.com<br>
      
     - 정보주체께서는 서비스을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. <br>
       정보주체의 문의에 대해 지체없이 답변 및 처리해드릴 것입니다.
