--- a/user_private.html
+++ b/user_private.html
@@ -48,7 +48,7 @@
     </p> 
     <p> 
     7. 개인정보 처리방침 변경<br>
-    - 이 개인정보 처리 방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.<br><br>
+    - 이 개인정보 처리 방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
     </p> 
     <p> 
     8. 이 개인정보 처리방침은 2018년 11월 10일 부터 적용됩니다.
