--- a/html.html
+++ b/html.html
@@ -3,6 +3,11 @@
 <head>
 <title>WEB1 - html</title>
 <meta charset="utf-8">
+<style>
+    p {
+        margin-bottom:20px;
+    }
+</style>
 </head>
 
 <body>
@@ -10,10 +15,10 @@
 
 <p>
     <h2>태그</h2>
-        HTML에는 150여개의 태그가 있음<br>
-        &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)같은 것들을 HTML에서는 <strong>태그</strong>라고 부름.<br>
+        HTML에는 150여개의 태그가 있음<br><br>
+        &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)같은 것들을 HTML에서는 <strong>태그</strong>라고 부름.<br><br>
         
-        일반적인 텍스트에 bold와 밑줄을 함께 적용할 수 있듯 태그는 중첩해서 사용할 수도 있음.<br>
+        일반적인 텍스트에 bold와 밑줄을 함께 적용할 수 있듯 태그는 중첩해서 사용할 수도 있음.<br><br>
         
         무엇인가를 설명하지 않는 태그들은 태그를 닫지 않음.
         (img, input, br, hr, meta 등)
@@ -21,21 +26,20 @@
 
 <p>
     <h2>문단 나누기</h2>
-        1. <strong>&lt;br&gt;</strong> : New Line<br>
-        br 태그는 연달아 쓸 수 있어 원하는 만큼의 간격을 줄 수 있다.<br><br>
-        2. <strong>&lt;p&gt;&lt;/p&gt;</strong> : 단락을 표현 <br>
-        p 태그는 단락을 표시해줌으로 정보를 가치있게 해주지만, 시각적으로 단락사이의 간격이 고정된다는 단점이 있음<br>
-        이 단점은 CSS를 이용하여 극복 할 수 있음<br>
+        1. <strong>&lt;br&gt;</strong> : New Line<br><br>
+        br 태그는 연달아 쓸 수 있어 원하는 만큼의 간격을 줄 수 있다.<br><br><br>
+        2. <strong>&lt;p&gt;&lt;/p&gt;</strong> : 단락을 표현 <br><br>
+        p 태그는 단락을 표시해줌으로 정보를 가치있게 해주지만, 시각적으로 단락사이의 간격이 고정된다는 단점이 있음<br><br>
+        이 단점은 CSS를 이용하여 극복 할 수 있음<br><br>
 
-        &lt;p style="margin-top:45px;"&gt;&lt;/p&gt;
-        위와 같이 p 태그에
-        style="margin-top:45px"를 추가하면
+        &lt;p style="margin-top:45px;"&gt;&lt;/p&gt;<br>
+        위와 같이 p 태그에 style="margin-top:45px" 를 추가하면
         p 태그의 위쪽에 45px 만큼의 여백(margin)이 생긴다.
     </p>
 
 <p>
     <h2>속성(attribute)</h2>
-        &lt;image&gt; 태그 이름만으로는 정보가 부족함<br>
+        &lt;image&gt; 태그 이름만으로는 정보가 부족함<br><br>
         그래서 새로운 문법 <strong>속성(attribute)</strong>을 적용하게 됨.<br><br>
         &lt;img <strong><u>src</u></strong>="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png"&gt;<br>
         <img src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7648.png" width="50%"><br><br>
