--- a/html.html
+++ b/html.html
@@ -4,9 +4,7 @@
 <title>WEB1 - html</title>
 <meta charset="utf-8">
 <style>
-    p {
-        margin-bottom:20px;
-    }
+    p { margin-bottom:50px; }
 </style>
 </head>
 
@@ -16,7 +14,8 @@
 <p>
     <h2>태그</h2>
         HTML에는 150여개의 태그가 있음<br><br>
-        &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)같은 것들을 HTML에서는 <strong>태그</strong>라고 부름.<br><br>
+        &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)<br>
+        등 을 HTML에서는 <strong>태그</strong>라고 부름.<br><br>
         
         일반적인 텍스트에 bold와 밑줄을 함께 적용할 수 있듯 태그는 중첩해서 사용할 수도 있음.<br><br>
         
