--- a/html.html
+++ b/html.html
@@ -47,23 +47,23 @@
 </p>
 
 <p>
-    &lt;h2&gt;부모 자식과 목록&lt;/h2&gt;
-    &lt;ul&gt;
-        &lt;li&gt;1. HTML&lt;/li&gt;
-        &lt;li&gt;2. CSS&lt;/li&gt;
-        &lt;li&gt;3. JavaScript&lt;/li&gt;
-    &lt;/ul&gt;
+    &lt;h2&gt;부모 자식과 목록&lt;/h2&gt;<br>
+    &lt;ul&gt;<br>
+        &lt;li&gt;1. HTML&lt;/li&gt;<br>
+        &lt;li&gt;2. CSS&lt;/li&gt;<br>
+        &lt;li&gt;3. JavaScript&lt;/li&gt;<br>
+    &lt;/ul&gt;<br><br>
     <ul>
         <li>1. HTML</li> 
         <li>2. CSS</li> 
         <li>3. JavaScript</li> 
     </ul>
-
-    &lt;ol&gt;
-        &lt;li&gt;HTML&lt;/li&gt; 
-        &lt;li&gt;CSS&lt;/li&gt; 
-        &lt;li&gt;JavaScript&lt;/li&gt;
-    &lt;/ol&gt;
+    <br><br>
+    &lt;ol&gt;<br>
+        &lt;li&gt;HTML&lt;/li&gt; <br>
+        &lt;li&gt;CSS&lt;/li&gt; <br>
+        &lt;li&gt;JavaScript&lt;/li&gt;<br>
+    &lt;/ol&gt;<br><br>
     <ol>
         <li>HTML</li> 
         <li>CSS</li> 
@@ -77,18 +77,17 @@
     HTML 태그들 중 사용 빈도수가 가장 높은 슈퍼스타들<br>
     <img src="https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/3135/7664.png" width="50%"><br>
     <p>
-    <strong>&lt;title&gt;&lt;/title&gt;</strong> : 웹브라우저의 탭 이름
-    title 태그는 검색엔진이 웹페이지를 분석할 때 가장 중요하게 생각하는 태그<br>
-    (title 태그를 쓰지 않으면 정말 큰 손해)<br>
+    <strong>&lt;title&gt;&lt;/title&gt;</strong> 
+    웹브라우저의 탭 이름<br>
+    title 태그는 검색 엔진이 웹페이지를 분석할 때 가장 중요하게 생각하는 태그<br>
+    (title 태그를 쓰지 않으면 검색시 노출 되기 어렵다.)<br>
     </p>
 
     <p>
     <strong>&lt;meta charset="utf-8"&gt;</strong><br>
-        영어가 아닌 문자가 깨지는 이유는<br>
-        웹페이지가 저장된 문자 표현 방식과<br>
-        웹브라우저가 웹페이지를 해석하는 방식이 일치하지 않을 때<br>
-        웹브라우저는 저렇게 이상한 문자를 표시하게 됨<br>
-        UTF-8로 만들어졌기 때문에 UTF-8로 열어야 한다고 알리는 방법
+        영어가 아닌 문자가 깨지는 이유는 웹페이지가 저장된 문자 표현 방식과 웹브라우저가 웹페이지를 해석하는 방식이 일치하지 않을 때<br><br>
+        웹 브라우저는 이상한 문자를 표시하게 됨<br><br>
+        UTF-8로 만들어졌기 때문에 UTF-8로 열어야 한다고 웹브라우저에 알리는 방법
     </p>    
 
     <p>
@@ -109,12 +108,12 @@
 
 <p>
     <h2>링크</h2>
-    <strong>&lt;a href=" "&gt;</strong> <br>
-    &lt;a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification"&gt; <br><br>
-    <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> <br>
+    <strong>&lt;a href=" "&gt;</strong> <br><br>
+    &lt;a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification"&gt; <br>
+    <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> <br><br>
     
 
-    <strong>target="_blank"</strong> : 링크를 클릭했을 때 새창에서 페이지가 열리게 하는 속성.<br>
+    <strong>target="_blank"</strong> : 링크를 클릭했을 때 새창에서 페이지가 열리게 하는 속성.<br><br>
 
     <strong>title=" "</strong> : 이 링크가 어떤 내용을 담고 있는지를 툴팁으로 보여주는 기능.<br>
     
