--- a/html.html
+++ b/html.html
@@ -15,7 +15,7 @@
     <h2>태그</h2>
         HTML에는 150여개의 태그가 있음<br><br>
         &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)<br>
-        등 을 HTML에서는 <strong>태그</strong>라고 부름.<br><br>
+        등 을 HTML에서는 <strong>태그</strong> 라고 부름.<br><br>
         
         일반적인 텍스트에 bold와 밑줄을 함께 적용할 수 있듯 태그는 중첩해서 사용할 수도 있음.<br><br>
         
@@ -47,23 +47,28 @@
 </p>
 
 <p>
-    &lt;h2&gt;부모 자식과 목록&lt;/h2&gt;<br>
+    <h2>부모 자식과 목록</h2>
     &lt;ul&gt;<br>
         &lt;li&gt;1. HTML&lt;/li&gt;<br>
         &lt;li&gt;2. CSS&lt;/li&gt;<br>
         &lt;li&gt;3. JavaScript&lt;/li&gt;<br>
-    &lt;/ul&gt;<br><br>
+    &lt;/ul&gt;<br>
+    <br>
+
     <ul>
         <li>1. HTML</li> 
         <li>2. CSS</li> 
         <li>3. JavaScript</li> 
     </ul>
+
     <br><br>
     &lt;ol&gt;<br>
         &lt;li&gt;HTML&lt;/li&gt; <br>
         &lt;li&gt;CSS&lt;/li&gt; <br>
         &lt;li&gt;JavaScript&lt;/li&gt;<br>
-    &lt;/ol&gt;<br><br>
+    &lt;/ol&gt;<br>
+    <br>
+
     <ol>
         <li>HTML</li> 
         <li>CSS</li> 
