--- a/css.html
+++ b/css.html
@@ -105,7 +105,12 @@
     <br><br>
 
     <h2>declaration(선언, 효과) 종류</h2>
-    하나하나 찾아봐야함;;
+    property는 검색해서 찾으며 쓰기! 외울 것이 아니다!<br><br>
+    색 변경 : color:black;<br><br>
+    밑줄 제거 : text-decoration: none;<br><br>
+    글씨 크기 : font-size:45px;<br><br>
+    정렬 : text-align:center;<br><br>
+
 </p>
 
 <p>
