--- a/css.html
+++ b/css.html
@@ -35,6 +35,10 @@
             grid-template-columns: 150px 1fr
         }
 
+        .saw{
+            color:gray;
+        }
+
         @media(min-width:800px){
             p {
                 border:none;
@@ -134,7 +138,7 @@
 
         아래는 div 태그에 grid 속성을 이용하여 이용하여 표를 만든 것이다.<br>
 
-        <div id="grid">
+        <div id="grid" class="saw">
                 <div>NAVIGATION</div>
                 <div>NAVIGATIONsafndsnfkjsak;flskdjflkajlksjfl;asflkjsa;lfjsld;kafweefoiweh;oiaf</div>
         </div><br><br>
@@ -156,6 +160,12 @@
                 div {<br>
                     <blockquote>
                   border:5px solid gray;<br>
+                    </blockquote>
+                }<br><br>
+
+                .saw {<br>
+                    <blockquote>
+                  color:gray;<br>
                     </blockquote>
                 }<br>
                 </blockquote>
