--- a/html.html
+++ b/html.html
@@ -14,6 +14,7 @@
 <p>
     <h2>태그</h2>
         HTML에는 150여개의 태그가 있음<br><br>
+        태그와 element는 같은 의미<br><br>
         &lt;strong&gt;&lt;/strong&gt;(강조), &lt;u&gt;&lt;/u&gt;(밑줄), &lt;h1&gt;&lt;/h1&gt;(제목)<br>
         등 을 HTML에서는 <strong>태그</strong> 라고 부름.<br><br>
         
